--- a/packages/ubuntu17.04/DEBIAN/control
+++ b/packages/ubuntu17.04/DEBIAN/control
@@ -4,6 +4,6 @@ Architecture: all
 Essential: no
 Section: contrib
 Priority: optional
-Depends: qt5-default (>=5.7.0) libqt5x11extras5 (>=5.7.0) libavcodec (>=3.2.0) libavformat (>=3.2.0) libswscale (>=3.2.0) libavutil (>=3.2.0)
+Depends: qt5-default (>=5.7.0), libqt5x11extras5 (>=5.7.0), libavcodec (>=3.2.0), libavformat (>=3.2.0), libswscale (>=3.2.0), libavutil (>=3.2.0)
 Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 Description: The open source and cross platform screen sharing software
