--- a/AppVeyor/appveyor.yml
+++ b/AppVeyor/appveyor.yml
@@ -12,7 +12,7 @@ build_script:
   - xcopy QtAV-depends-windows-x86+x64\bin\x64\* %QTDIR%\bin\ /e /i /Y
   - xcopy QtAV-depends-windows-x86+x64\lib\x64\* %QTDIR%\lib\ /e /i /Y
   - xcopy QtAV-depends-windows-x86+x64\include\* %QTDIR%\include\ /e /i /Y
-  - qmake ../KShare.pro
+  - qmake CONFIG+=nopkg ../KShare.pro
   - mingw32-make.exe -j8
   - copy release\KShare.exe ..\KShare.exe
   - cd ..
