--- a/AppVeyor/appveyor.yml
+++ b/AppVeyor/appveyor.yml
@@ -1,6 +1,5 @@
 environment:
   QTDIR: C:\Qt\5.9\mingw53_32
-platform: x64
 build_script:
   - dir
   - mkdir build
@@ -9,8 +8,10 @@ build_script:
   - git submodule update --init --recursive
   - curl -kLO https://ffmpeg.zeranoe.com/builds/win64/dev/ffmpeg-3.3.2-win64-dev.zip
   - 7z x ffmpeg-3.3.2-win64-dev.zip
+  - set FFMPEG_DEV_PATH=%CD%\ffmpeg-3.3.2-win64-dev
   - curl -kLO https://ffmpeg.zeranoe.com/builds/win64/shared/ffmpeg-3.3.2-win64-shared.zip
   - 7z x ffmpeg-3.3.2-win64-shared.zip
+  - set FFMPEG_SHARED_PATH=%cd%\ffmpeg-3.3.2-win64-shared
   - ps: Start-FileDownload https://downloads.sourceforge.net/project/qtav/depends/QtAV-depends-windows-x86%2Bx64.7z av.7z
   - 7z x av.7z > NUL
   - xcopy ffmpeg-3.3.2-win64-shared\* %QTDIR% /e /i /Y
