Multipart works now

--- a/packages/arch/KShare/PKGBUILD.sample
+++ b/packages/arch/KShare/PKGBUILD.sample
@@ -17,7 +17,7 @@ build() {
   git checkout dev
   git submodule update --init --recursive  
   qmake
-  make
+  make -j$(($(nproc) + 1))
 }
 
 package() {
