--- a/packages/arch/KShare/PKGBUILD.sample
+++ b/packages/arch/KShare/PKGBUILD.sample
@@ -25,7 +25,7 @@ package() {
   mkdir -p "$pkgdir/usr/bin"
   install ./KShare "$pkgdir/usr/bin/kshare"
   mkdir -p "$pkgdir/usr/share/pixmaps"
-  install "${srcdir}/KShare/icons/icon.png"
+  install "${srcdir}/KShare/icons/icon.png" "$pkgdir/usr/share/pixmaps"
   mkdir -p "$pkgdir/usr/share/applications"
   install KShare.desktop "$pkgdir/usr/share/applications"
 }
