--- a/packages/arch/Stable-KShare/PKGBUILD.sample
+++ b/packages/arch/Stable-KShare/PKGBUILD.sample
@@ -23,5 +23,9 @@ package() {
   cd "${srcdir}/KShare"
   mkdir -p "$pkgdir/usr/bin"
   install ./KShare "$pkgdir/usr/bin/kshare"
+  mkdir -p "$pkgdir/usr/share/pixmaps"
+  install "${srcdir}/KShare/icons/icon.png" "$pkgdir/usr/share/pixmaps"
+  mkdir -p "$pkgdir/usr/share/applications"
+  install KShare.desktop "$pkgdir/usr/share/applications"
 }
 
