--- a/packages/arch/Stable-KShare/PKGBUILD.sample
+++ b/packages/arch/Stable-KShare/PKGBUILD.sample
@@ -3,7 +3,7 @@ pkgname=kshare
 pkgver=;VER;
 pkgrel=1
 conflicts=("kshare-git")
-pkgdesc="A ShareX inspired cross platform utility written with Qt."
+pkgdesc="The free and open source and cross platform screen sharing software."
 arch=('i686' 'x86_64')
 url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
