--- a/packages/arch/KShare/PKGBUILD.sample
+++ b/packages/arch/KShare/PKGBUILD.sample
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
 provides=('kshare=$pkgver')
-depends=(qt5-base qt5-x11extras xcb-util-cursor ffmpeg libxfixes)
+depends=(qt5-base qt5-svg qt5-x11extras xcb-util-cursor ffmpeg libxfixes)
 source=(git+https://github.com/ArsenArsen/KShare.git)
 sha1sums=('SKIP')
 
