--- a/packages/arch/Stable-KShare/PKGBUILD
+++ b/packages/arch/Stable-KShare/PKGBUILD
@@ -1,15 +1,15 @@
 # Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 pkgname=kshare
-pkgver=4.1
+pkgver=4.1r6
 pkgrel=1
 conflicts=("kshare-git")
-pkgdesc="A ShareX inspired cross platform utility written with Qt."
+pkgdesc="The free and open source and cross platform screen sharing software."
 arch=('i686' 'x86_64')
 url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
 provides=('kshare=$pkgver')
 depends=(qt5-base qt5-x11extras xcb-util-cursor ffmpeg libxfixes)
-source=(git+https://github.com/ArsenArsen/KShare.git#tag=v${pkgver})
+source=(git+https://github.com/ArsenArsen/KShare.git)
 sha1sums=('SKIP')
 
 build() {
@@ -23,5 +23,9 @@ package() {
   cd "${srcdir}/KShare"
   mkdir -p "$pkgdir/usr/bin"
   install ./KShare "$pkgdir/usr/bin/kshare"
+  mkdir -p "$pkgdir/usr/share/pixmaps"
+  install "${srcdir}/KShare/icons/icon.png" "$pkgdir/usr/share/pixmaps/KShare.png"
+  mkdir -p "$pkgdir/usr/share/applications"
+#  install KShare.desktop "$pkgdir/usr/share/applications"
 }
 
