--- a/packages/arch/Stable-KShare/PKGBUILD
+++ b/packages/arch/Stable-KShare/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 pkgname=kshare
-pkgver=4.1r6
+pkgver=4.1r7
 pkgrel=1
 conflicts=("kshare-git")
 pkgdesc="The free and open source and cross platform screen sharing software."
@@ -9,6 +9,7 @@ url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
 provides=('kshare=$pkgver')
 depends=(qt5-base qt5-x11extras xcb-util-cursor ffmpeg libxfixes)
+makedepends=('git')
 source=(git+https://github.com/ArsenArsen/KShare.git)
 sha1sums=('SKIP')
 
@@ -22,7 +23,7 @@ build() {
 package() {
   cd "${srcdir}/KShare"
   mkdir -p "$pkgdir/usr/bin"
-  install ./KShare "$pkgdir/usr/bin/kshare"
+  install src/KShare "$pkgdir/usr/bin/kshare"
   mkdir -p "$pkgdir/usr/share/pixmaps"
   install "${srcdir}/KShare/icons/icon.png" "$pkgdir/usr/share/pixmaps/KShare.png"
   mkdir -p "$pkgdir/usr/share/applications"
