Add qt5-svg to deps

--- a/packages/arch/Stable-KShare/PKGBUILD
+++ b/packages/arch/Stable-KShare/PKGBUILD
@@ -8,7 +8,7 @@ arch=('i686' 'x86_64')
 url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
 provides=('kshare=$pkgver')
-depends=(qt5-base qt5-x11extras xcb-util-cursor ffmpeg libxfixes)
+depends=(qt5-base qt5-x11extras qt5-svg xcb-util-cursor ffmpeg libxfixes)
 makedepends=('git')
 source=(git+https://github.com/ArsenArsen/KShare.git)
 sha1sums=('SKIP')
