--- a/packages/arch/KShare/PKGBUILD
+++ b/packages/arch/KShare/PKGBUILD
@@ -31,7 +31,7 @@ build() {
 
 package() {
   cd KShare
-  install -Dm755 src/KShare "$pkgdir/usr/bin/kshare"
+  install -Dm755 src/kshare "$pkgdir/usr/bin/kshare"
   install -Dm644 icons/icon.png "$pkgdir/usr/share/pixmaps/KShare.png"
   install -Dm644 KShare.desktop "$pkgdir/usr/share/applications/KShare.desktop"
 
