Update version in git package

--- a/packages/arch/KShare/PKGBUILD
+++ b/packages/arch/KShare/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 pkgname=kshare-git
-pkgver=v4.1.139.gfe86bfe
+pkgver=v4.1.191.ge36f6de
 pkgrel=1
 pkgdesc="The free and open source and cross platform screen sharing software."
 arch=('i686' 'x86_64')
