--- a/packages/arch/KShare/PKGBUILD
+++ b/packages/arch/KShare/PKGBUILD
@@ -32,7 +32,7 @@ build() {
 package() {
   cd KShare
   install -Dm755 src/kshare "$pkgdir/usr/bin/kshare"
-  install -Dm644 icons/icon.png "$pkgdir/usr/share/pixmaps/KShare.png"
+  install -Dm644 src/icons/icon.png "$pkgdir/usr/share/pixmaps/KShare.png"
   install -Dm644 KShare.desktop "$pkgdir/usr/share/applications/KShare.desktop"
 
   install -Dm644 LICENSE "$pkgdir/usr/share/licenses/${pkgname}/LICENSE"
