Add pkg-config to arch mkdeps

--- a/packages/arch/KShare/PKGBUILD
+++ b/packages/arch/KShare/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 pkgname=kshare-git
-pkgver=v4.1.191.ge36f6de
+pkgver=v4.1.r196.gc38161b
 pkgrel=1
 pkgdesc="The free and open source and cross platform screen sharing software."
 arch=('i686' 'x86_64')
@@ -9,7 +9,7 @@ license=('MIT')
 provides=(kshare)
 conflicts=(kshare)
 depends=(qt5-base qt5-x11extras qt5-svg xcb-util-cursor ffmpeg libxfixes)
-makedepends=('git')
+makedepends=(git pkg-config)
 source=(git+https://github.com/ArsenArsen/KShare.git#branch=dev)
 sha1sums=('SKIP')
 
