--- a/packages/arch/Stable-KShare/PKGBUILD
+++ b/packages/arch/Stable-KShare/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: ArsenArsen <arsenarsentmc@outlook.com>
 pkgname=kshare
-pkgver=4.1r7
+pkgver=v4.1.r8
 pkgrel=1
 conflicts=("kshare-git")
 pkgdesc="The free and open source and cross platform screen sharing software."
@@ -9,7 +9,7 @@ url="https://github.com/ArsenArsen/KShare"
 license=('MIT')
 provides=('kshare=$pkgver')
 depends=(qt5-base qt5-x11extras qt5-svg xcb-util-cursor ffmpeg libxfixes)
-makedepends=('git')
+makedepends=(git pkg-config)
 source=(git+https://github.com/ArsenArsen/KShare.git)
 sha1sums=('SKIP')
 
